name:                openflow
version:             0.1.0.0
synopsis:            OpenFlow codec by pure haskell
description:         Please see README.md
homepage:            https://github.com/utky/openflow
license:             BSD3
license-file:        LICENSE
author:              Yutaka Imamura
maintainer:          ilyaletre@gmail.com
copyright:           2016 Yutaka Imamura
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.OpenFlow
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     -- , attoparsec
                     -- , network-simple-tls
                     -- , pipes-network-tls
  default-language:    Haskell2010

executable openflow-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , openflow
  default-language:    Haskell2010

test-suite openflow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , openflow
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/utky/openflow.git
