name:                openflow
version:             0.1.0.0
synopsis:            OpenFlow codec by pure haskell
description:         Please see README.md
homepage:            https://github.com/utky/openflow
license:             BSD3
license-file:        LICENSE
author:              Yutaka Imamura
maintainer:          ilyaletre@gmail.com
copyright:           2016 Yutaka Imamura
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.OpenFlow
                       Network.OpenFlow.Message
                       Network.OpenFlow.Decode
                       Network.OpenFlow.Parser
                       Network.OpenFlow.Encode
  other-modules:       Network.OpenFlow.Message.OfpEcho
                       Network.OpenFlow.Message.OfpExperimenter
                       Network.OpenFlow.Message.OfpHeader
                       Network.OpenFlow.Message.OfpHello
                       Network.OpenFlow.Message.OfpPort
                       Network.OpenFlow.Message.OfpType
                       Network.OpenFlow.Parser.Word
                       Network.OpenFlow.Parser.TLV
                       Network.OpenFlow.Parser.OfpMessage
                       Network.OpenFlow.Parser.OfpType
                       Network.OpenFlow.Parser.OfpHeader
                       Network.OpenFlow.Parser.OfpHello
                       Network.OpenFlow.Parser.OfpEcho
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , attoparsec
                     -- , network-simple-tls
                     -- , pipes-network-tls
  default-language:    Haskell2010

executable openflow-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , openflow
  default-language:    Haskell2010

test-suite openflow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , filepath
                     , bytestring
                     , openflow
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/utky/openflow.git
